--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@progress/kendo-licensing": "^1.1.4",
     "@progress/kendo-react-buttons": "^4.7.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -15,6 +16,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-text-ellipsis": "^1.6.0",
     "reactstrap": "^8.9.0",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1"
