Move google login token to .env

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-BACKEND_URL=140.112.106.174:8080
+BACKEND_URL=http://api.ramen-live.com:5050
+REACT_APP_GOOGLE_LOGIN=token.apps.googleusercontent.com
