--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^28.0.0",
+    "@ckeditor/ckeditor5-build-inline": "^29.0.0",
+    "@ckeditor/ckeditor5-ckfinder": "^29.0.0",
     "@ckeditor/ckeditor5-react": "^3.0.2",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
