--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@ckeditor/ckeditor5-react": "^3.0.2",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@monaco-editor/react": "^4.2.1",
     "@progress/kendo-licensing": "^1.1.4",
     "@progress/kendo-react-buttons": "^4.7.0",
     "@testing-library/jest-dom": "^5.11.4",
