--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@testing-library/user-event": "^12.1.10",
     "date-fns": "^2.23.0",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-pdf": "^5.3.2",
