--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "dependencies": {
     "@ckeditor/ckeditor5-basic-styles": "^29.0.0",
     "@ckeditor/ckeditor5-build-classic": "^29.0.0",
+    "@ckeditor/ckeditor5-build-inline": "^29.0.0",
+    "@ckeditor/ckeditor5-ckfinder": "^29.0.0",
     "@ckeditor/ckeditor5-editor-classic": "^29.0.0",
     "@ckeditor/ckeditor5-essentials": "^29.0.0",
     "@ckeditor/ckeditor5-paragraph": "^29.0.0",
-    "@ckeditor/ckeditor5-build-inline": "^29.0.0",
-    "@ckeditor/ckeditor5-ckfinder": "^29.0.0",
     "@ckeditor/ckeditor5-react": "^3.0.2",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
@@ -20,6 +20,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-pdf": "^5.3.2",
