--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.3.10",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@monaco-editor/react": "^4.2.1",
     "@progress/kendo-licensing": "^1.1.4",
     "@progress/kendo-react-buttons": "^4.7.0",
