--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-BACKEND_URL=http://api.ramen-live.com:5050
-REACT_APP_GOOGLE_LOGIN=token.apps.googleusercontent.com
+REACT_APP_BACKEND_URL=http://api.ramen-live.com:5050/api-server
+REACT_APP_FILE_SERVER_URL=http://api.ramen-live.com:5050/file-server
+REACT_APP_GOOGLE_LOGIN=<token>.apps.googleusercontent.com
