--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/icons": "^4.11.2",
-    "@material-ui/pickers": "^3.3.10",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/pickers": "^3.3.10",
     "@monaco-editor/react": "^4.2.1",
     "@progress/kendo-licensing": "^1.1.4",
     "@progress/kendo-react-buttons": "^4.7.0",
@@ -25,6 +25,7 @@
     "@testing-library/user-event": "^12.1.10",
     "date-fns": "^2.23.0",
     "react": "^17.0.2",
+    "react-content-loader": "^6.0.3",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
