--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.4",
     "date-fns": "^2.23.0",
     "react": "^17.0.2",
     "react-content-loader": "^6.0.3",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
+    "react-image-file-resizer": "^0.4.7",
+    "react-images-upload": "^1.2.8",
     "react-pdf": "^5.3.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
