--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.4",
+    "ckeditor5-imgur-uploader": "^0.0.1",
     "date-fns": "^2.23.0",
     "react": "^17.0.2",
     "react-content-loader": "^6.0.3",
