--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/pickers": "^3.3.10",
     "@monaco-editor/react": "^4.2.1",
+    "@mui/x-data-grid": "^4.0.1",
     "@progress/kendo-licensing": "^1.1.4",
     "@progress/kendo-react-buttons": "^4.7.0",
     "@testing-library/jest-dom": "^5.11.4",
