update env variables

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ REACT_APP_BACKEND_URL=http://api.ramen-live.com:5050/api-server
 REACT_APP_FILE_SERVER_URL=http://api.ramen-live.com:5050/file-server
 REACT_APP_GOOGLE_LOGIN=<token>.apps.googleusercontent.com
 REACT_APP_IMGUR_CLIENT_ID=<client_id>
+REACT_APP_BOWCODE_PREFIX=https://bow-code.ntu.im/
